--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>0.5.1</kotlin.version>
-        <gmavenVersion>1.4</gmavenVersion>
+        <kotlin.version>0.5.162</kotlin.version>
+        <gmavenVersion>1.5</gmavenVersion>
         <gmavenProviderSelection>2.0</gmavenProviderSelection>
-        <groovyVersion>2.0.4</groovyVersion>
+        <groovyVersion>2.1.0</groovyVersion>
     </properties>
 
     <repositories>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>13.0.1</version>
+            <version>14.0</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.lambdaj</groupId>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -99,6 +99,7 @@
                 <configuration>
                     <providerSelection>${gmavenProviderSelection}</providerSelection>
                     <sourceEncoding>UTF-8</sourceEncoding>
+                    <source/>
                 </configuration>
                 <executions>
                     <execution>
